Subida de la rama previa al mergeo con modelos
